Task4_IstioServiceMesh/task4a_istio_gateway_virtualsvc/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: javaservicemeshgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: javademovs
spec:
  hosts:
  - "*"
  gateways:
  - javaservicemeshgateway
  http:
  - match: 
    - uri:
        prefix: /javaservice
    redirect:
      uri: /
      redirectCode: 302
  - route:
    - destination:
        host: web-appsvc
        port:
          number: 8080
